--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemailer": "^6.7.8"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
   }
